Fix Safari portrait alignment

--- a/css/home.css
+++ b/css/home.css
@@ -23,7 +23,7 @@
 }
 
 .home__headline picture {
-    align-self: end;
+    align-self: flex-end;
 }
 
 .home__headline picture img {
